fix webmention likes not showing

--- a/src/sass/blocks/_webmentions.scss
+++ b/src/sass/blocks/_webmentions.scss
@@ -30,7 +30,7 @@
 }
 
 .wm-mentioner__img {
-  border-radius: 50%;
+  border-radius: 4px;
   float: left;
   height: 32px;
   margin: 0 12px 4px 0;
